A few more UI tweaks.
Make sure dialog button boxes aren't expanding.
Make storage browser a gtk Window, with a dialog type hint.

--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -1771,6 +1771,7 @@ User shouldn't see this.</property>
                 </child>
               </widget>
               <packing>
+                <property name="expand">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
