--- a/src/vmm-create-vol.glade
+++ b/src/vmm-create-vol.glade
@@ -90,7 +90,7 @@
                       <widget class="GtkVBox" id="vbox4">
                         <property name="visible">True</property>
                         <property name="orientation">vertical</property>
-                        <property name="spacing">10</property>
+                        <property name="spacing">24</property>
                         <child>
                           <widget class="GtkTable" id="table1">
                             <property name="visible">True</property>
@@ -174,6 +174,7 @@
                             </child>
                           </widget>
                           <packing>
+                            <property name="expand">False</property>
                             <property name="position">0</property>
                           </packing>
                         </child>
@@ -410,6 +411,7 @@
                     </child>
                   </widget>
                   <packing>
+                    <property name="expand">False</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
