--- a/src/vmm-preferences.glade
+++ b/src/vmm-preferences.glade
@@ -638,9 +638,6 @@ For all domains</property>
                               </packing>
                             </child>
                             <child>
-                              <placeholder/>
-                            </child>
-                            <child>
                               <widget class="GtkLabel" id="label22">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
@@ -683,6 +680,9 @@ For all domains</property>
                                 <property name="bottom_attach">5</property>
                                 <property name="x_options">GTK_FILL</property>
                               </packing>
+                            </child>
+                            <child>
+                              <placeholder/>
                             </child>
                           </widget>
                         </child>
@@ -762,6 +762,7 @@ For all domains</property>
             </child>
           </widget>
           <packing>
+            <property name="expand">False</property>
             <property name="position">1</property>
           </packing>
         </child>
