console: Rework VNC sizing: allow scaling down and maintain ratio
There were several defficiencies in the way we handled VNC widget sizing, so
try to fix them up. We now have:

- Ability to scale down
- Aspect ratio maintained while scaling
- Much better scrollbar handling without the hacks.

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -771,6 +771,7 @@
                     <child>
                       <widget class="GtkViewport" id="console-vnc-viewport">
                         <property name="visible">True</property>
+                        <property name="resize_mode">queue</property>
                         <property name="shadow_type">none</property>
                         <child>
                           <placeholder/>
