--- a/src/vmm-choose-cd.glade
+++ b/src/vmm-choose-cd.glade
@@ -118,19 +118,6 @@
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkComboBox" id="cd-path">
-                        <property name="visible">True</property>
-                        <signal name="changed" handler="on_cd_path_changed"/>
-                      </widget>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
-                        <property name="top_attach">3</property>
-                        <property name="bottom_attach">4</property>
-                        <property name="y_options">GTK_FILL</property>
-                      </packing>
-                    </child>
-                    <child>
                       <widget class="GtkAlignment" id="alignment1">
                         <property name="visible">True</property>
                         <property name="left_padding">21</property>
@@ -161,7 +148,6 @@
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">_Device Media:</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">cd-path</property>
                           </widget>
                         </child>
                       </widget>
@@ -170,6 +156,37 @@
                         <property name="bottom_attach">4</property>
                         <property name="x_options">GTK_FILL</property>
                         <property name="y_options">GTK_FILL</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkHBox" id="hbox2">
+                        <property name="visible">True</property>
+                        <property name="spacing">6</property>
+                        <child>
+                          <widget class="GtkComboBox" id="cd-path">
+                            <property name="visible">True</property>
+                            <signal name="changed" handler="on_cd_path_changed"/>
+                          </widget>
+                          <packing>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <widget class="GtkImage" id="cd-path-warn">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-dialog-warning</property>
+                          </widget>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">3</property>
+                        <property name="bottom_attach">4</property>
                       </packing>
                     </child>
                   </widget>
