manager: Improve tooltip for 'Open' toolbar button

--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -280,7 +280,7 @@
                   <widget class="GtkToolButton" id="vm-open">
                     <property name="visible">True</property>
                     <property name="has_tooltip">True</property>
-                    <property name="tooltip" translatable="yes">Show the virtual machine's details</property>
+                    <property name="tooltip" translatable="yes">Show the virtual machine console and details</property>
                     <property name="is_important">True</property>
                     <property name="label" translatable="yes">_Open</property>
                     <property name="use_underline">True</property>
