Fix some UI typos

--- a/src/vmm-create-net.glade
+++ b/src/vmm-create-net.glade
@@ -1018,7 +1018,7 @@
                                       <widget class="GtkLabel" id="label392">
                                         <property name="visible">True</property>
                                         <property name="xalign">1</property>
-                                        <property name="label" translatable="yes">_Desination:</property>
+                                        <property name="label" translatable="yes">_Destination:</property>
                                         <property name="use_underline">True</property>
                                         <property name="mnemonic_widget">net-forward-dev</property>
                                       </widget>
