choosecd: Customize dialog based on media type (cdrom, floppy)

--- a/src/vmm-choose-cd.glade
+++ b/src/vmm-choose-cd.glade
@@ -7,7 +7,7 @@
     <property name="can_focus">True</property>
     <property name="has_focus">True</property>
     <property name="border_width">6</property>
-    <property name="title" translatable="yes">Choose CD Media</property>
+    <property name="title" translatable="yes">Choose Media</property>
     <property name="resizable">False</property>
     <property name="window_position">center-on-parent</property>
     <property name="type_hint">dialog</property>
@@ -196,7 +196,7 @@
             <child>
               <widget class="GtkLabel" id="title-label">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">&lt;b&gt;CD Source Device Or File&lt;/b&gt;</property>
+                <property name="label" translatable="yes">&lt;b&gt;Choose Source Device or File&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
               </widget>
               <packing>
