--- a/src/vmm-create-pool.glade
+++ b/src/vmm-create-pool.glade
@@ -151,6 +151,7 @@
                             <property name="can_focus">True</property>
                             <property name="invisible_char">&#x25CF;</property>
                             <signal name="focus_in_event" handler="on_pool_name_focus_in_event"/>
+                            <signal name="activate" handler="on_pool_name_activate"/>
                           </widget>
                           <packing>
                             <property name="left_attach">1</property>
