--- a/src/vmm-delete.glade
+++ b/src/vmm-delete.glade
@@ -121,6 +121,7 @@
                 <property name="label">gtk-cancel</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="has_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
                 <signal name="clicked" handler="on_delete_cancel_clicked"/>
