--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -1358,7 +1358,7 @@ User shouldn't see this.</property>
                                 <child>
                                   <widget class="GtkTable" id="table4">
                                     <property name="visible">True</property>
-                                    <property name="n_rows">5</property>
+                                    <property name="n_rows">6</property>
                                     <property name="n_columns">2</property>
                                     <property name="column_spacing">6</property>
                                     <property name="row_spacing">6</property>
@@ -1502,6 +1502,26 @@ User shouldn't see this.</property>
                                         <property name="x_options">GTK_FILL</property>
                                         <property name="y_options"></property>
                                       </packing>
+                                    </child>
+                                    <child>
+                                      <widget class="GtkCheckButton" id="summary-customize">
+                                        <property name="label" translatable="yes">C_ustomize configuration before install</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">False</property>
+                                        <property name="use_underline">True</property>
+                                        <property name="draw_indicator">True</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="left_attach">1</property>
+                                        <property name="right_attach">2</property>
+                                        <property name="top_attach">5</property>
+                                        <property name="bottom_attach">6</property>
+                                        <property name="x_options">GTK_FILL</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
                                     </child>
                                   </widget>
                                 </child>
